--- a/to-do-list-app/package.json
+++ b/to-do-list-app/package.json
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dpdm": "^3.14.0"
   }
 }
