--- a/Cloud-Functions/package.json
+++ b/Cloud-Functions/package.json
@@ -1,5 +1,8 @@
 {
   "name": "cloud-functions",
+  "engines": {
+    "node": "18"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/functions-framework": "^3.3.0",
-    "firebase-admin": "^11.11.0"
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.4.1"
   }
 }
