--- a/to-do-list-app/package.json
+++ b/to-do-list-app/package.json
@@ -11,17 +11,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.11.1",
     "dayjs": "^1.11.10",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.9.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
