--- a/to-do-list-app/package.json
+++ b/to-do-list-app/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
+    "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.2",
     "react-router-dom": "^6.16.0",
